--- a/manager/config/packages/doctrine.yaml
+++ b/manager/config/packages/doctrine.yaml
@@ -1,18 +1,24 @@
-
+parameters:
+    # Adds a fallback DATABASE_URL if the env var is not set.
+    # This allows you to run cache:warmup even if your
+    # environment variables are not available yet.
+    # You should not need to change this value.
+    env(DATABASE_URL): ''
 
 doctrine:
     dbal:
+        # configure these for your database server
         driver: 'pdo_pgsql'
         server_version: '11.2'
         charset: utf8
         default_table_options:
             charset: utf8
-            collate:
+            collate: -
 
         url: '%env(resolve:DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: true
-        naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
+        naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
         mappings:
             User:
