--- a/manager/config/packages/prod/monolog.yaml
+++ b/manager/config/packages/prod/monolog.yaml
@@ -4,8 +4,9 @@ monolog:
             type: fingers_crossed
             action_level: error
             handler: nested
-            excluded_http_codes: [404, 405]
-            buffer_size: 50 # How many messages should be saved? Prevent memory leaks
+            excluded_404s:
+                # regex: exclude all 404 errors from the logs
+                - ^/
         nested:
             type: stream
             path: "%kernel.logs_dir%/%kernel.environment%.log"
