--- a/manager/.env.example
+++ b/manager/.env.example
@@ -20,6 +20,7 @@ APP_SECRET=a3dee45bc0253c9ccad68426566cafda
 #TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
 
+
 ###> doctrine/doctrine-bundle ###
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
@@ -32,33 +33,6 @@ DATABASE_URL=pgsql://app:secret@manager-postgres:5432/app
 # For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=smtp://mailer:1025
-MAILER_FROM_EMAIL=mail@app.test
-MAILER_FROM_NAME=App
+MAILER_FROM_EMAIL=zhora@test.admin
+MAILER_FROM_NAME=Zhora
 ###< symfony/swiftmailer-bundle ###
-
-###> symfony/messenger ###
-# Choose one of the transports below
-# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
-# MESSENGER_TRANSPORT_DSN=doctrine://default
-MESSENGER_TRANSPORT_DSN=redis://manager-queue-redis:6379/messages
-###< symfony/messenger ###
-
-OAUTH_FACEBOOK_ID=393768938134634
-OAUTH_FACEBOOK_SECRET=test
-
-REDIS_HOST=manager-redis
-REDIS_PASSWORD=secret
-
-STORAGE_BASE_URL=http://localhost:8081
-STORAGE_FTP_HOST=storage-ftp
-STORAGE_FTP_USERNAME=app
-STORAGE_FTP_PASSWORD=secret
-
-CENTRIFUGO_WS_HOST=ws://localhost:8083
-CENTRIFUGO_API_HOST=http://centrifugo:8000
-CENTRIFUGO_API_KEY=secret
-CENTRIFUGO_SECRET=secret
-
-OAUTH_ENCRYPTION_KEY=secret
-OAUTH_PRIVATE_KEY=/app/var/oauth/private.key
-OAUTH_PUBLIC_KEY=/app/var/oauth/public.key
