--- a/manager/composer.json
+++ b/manager/composer.json
@@ -2,9 +2,10 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.2",
+        "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "finesse/swiftmailer-defaults-plugin": "^2.0",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
