--- a/manager/config/services.yaml
+++ b/manager/config/services.yaml
@@ -26,11 +26,13 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\Model\User\Service\ConfirmTokenSender:
-        $from: {'%env(MAILER_FROM_EMAIL)%': '%env(MAILER_FROM_NAME)%'}
-
-    App\Model\User\Service\ResetTokenSender:
-        $from: {'%env(MAILER_FROM_EMAIL)%': '%env(MAILER_FROM_NAME)%'}
+    Finesse\SwiftMailerDefaultsPlugin\SwiftMailerDefaultsPlugin:
+        arguments:
+            $defaults:
+                from:
+                    '%env(MAILER_FROM_EMAIL)%': '%env(MAILER_FROM_NAME)%'
+        tags:
+            - { name: swiftmailer.default.plugin }
 
     App\Model\User\Service\ResetTokenizer:
         factory: 'App\Container\Model\User\Service\ResetTokenizerFactory:create'
