--- a/manager/config/packages/security.yaml
+++ b/manager/config/packages/security.yaml
@@ -1,16 +1,22 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        in_memory: { memory: ~ }
+        fetcher:
+            id: App\Security\UserProvider
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+            user_checker: App\Security\UserChecker
             guard:
                 authenticators:
                     - App\Security\LoginFormAuthenticator
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800
+                path: /
 
             # activate different ways to authenticate
 
@@ -18,7 +24,8 @@ security:
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
 
             form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
+            logout:
+                path:   app_logout
 
     role_hierarchy:
         ROLE_ADMIN: [ROLE_USER]
