--- a/docker-compose-production.yml
+++ b/docker-compose-production.yml
@@ -14,6 +14,7 @@ services:
             APP_SECRET: ${MANAGER_APP_SECRET}
             DATABASE_URL: pgsql://app:${MANAGER_DB_PASSWORD}@manager-postgres:5432/app
             MAILER_URL: null://localhost
+            OAUTH_FACEBOOK_SECRET: ${MANAGER_OAUTH_FACEBOOK_SECRET}
         depends_on:
             - manager-postgres
     manager-php-cli:
@@ -22,6 +23,7 @@ services:
             APP_SECRET: ${MANAGER_APP_SECRET}
             DATABASE_URL: pgsql://app:${MANAGER_DB_PASSWORD}@manager-postgres:5432/app
             MAILER_URL: null://localhost
+            OAUTH_FACEBOOK_SECRET: ${MANAGER_OAUTH_FACEBOOK_SECRET}
         depends_on:
             - manager-postgres
     manager-postgres:
