--- a/manager/.env.example
+++ b/manager/.env.example
@@ -36,3 +36,5 @@ MAILER_URL=smtp://mailer:1025
 MAILER_FROM_EMAIL=zhora@test.admin
 MAILER_FROM_NAME=Zhora
 ###< symfony/swiftmailer-bundle ###
+OAUTH_FACEBOOK_ID=998356907259957
+OAUTH_FACEBOOK_SECRET=test
