--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
         depends_on:
             - manager-php-fpm
         ports:
-            - "8089:80"
+            - "8080:80"
     manager-php-fpm:
         build:
             context: ./manager/docker/development
@@ -29,6 +29,11 @@ services:
         depends_on:
             - manager-postgres
             - mailer
+    manager-node:
+        image: node:11.13-alpine
+        volumes:
+            - ./manager:/app
+        working_dir: /app
     manager-postgres:
         image: postgres:11.2-alpine
         volumes:
@@ -39,6 +44,7 @@ services:
             POSTGRES_DB: app
         ports:
             - "54321:5432"
+
     mailer:
         image: mailhog/mailhog
         ports:
