--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,12 @@ services:
         depends_on:
             - manager-postgres
             - mailer
+    manager-node-watch:
+        image: node:11.13-alpine
+        volumes:
+            - ./manager:/app
+        working_dir: /app
+        command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && npm run watch"
     manager-node:
         image: node:11.13-alpine
         volumes:
