--- a/manager/package.json
+++ b/manager/package.json
@@ -15,6 +15,8 @@
     "devDependencies": {
         "@symfony/webpack-encore": "^0.27.0",
         "core-js": "^3.0.0",
+        "node-sass": "^4.11.0",
+        "sass-loader": "^7.1.0",
         "webpack-notifier": "^1.6.0"
     }
 }
