[6-2] add Core ui/move session to redis/ added new validation command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
             - ./manager:/app
         depends_on:
             - manager-postgres
+            - manager-redis
             - mailer
     manager-php-cli:
         build:
@@ -28,6 +29,7 @@ services:
             - composer:/root/.composer/cache
         depends_on:
             - manager-postgres
+            - manager-redis
             - mailer
     manager-node-watch:
         image: node:11.13-alpine
@@ -50,6 +52,11 @@ services:
             POSTGRES_DB: app
         ports:
             - "54321:5432"
+    manager-redis:
+        image: redis:3.0-alpine
+        volumes:
+            - manager-redis:/data
+        command: redis-server --requirepass secret
 
     mailer:
         image: mailhog/mailhog
@@ -58,4 +65,5 @@ services:
 
 volumes:
     manager-postgres:
+    manager-redis:
     composer:
