--- a/manager/.env.example
+++ b/manager/.env.example
@@ -38,3 +38,5 @@ MAILER_FROM_NAME=Zhora
 ###< symfony/swiftmailer-bundle ###
 OAUTH_FACEBOOK_ID=998356907259957
 OAUTH_FACEBOOK_SECRET=test
+
+REDIS_URL=tcp://manager-redis:6379?password=secret
