--- a/manager/composer.json
+++ b/manager/composer.json
@@ -8,6 +8,7 @@
         "finesse/swiftmailer-defaults-plugin": "^2.0",
         "knpuniversity/oauth2-client-bundle": "^1.28",
         "league/oauth2-facebook": "^2.0",
+        "predis/predis": "^1.1",
         "ramsey/uuid": "^3.8",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.2.*",
@@ -27,7 +28,7 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
-        "symfony/webpack-encore-bundle": "^1.7",
+        "symfony/webpack-encore-bundle": "^1.5",
         "symfony/yaml": "4.2.*",
         "webmozart/assert": "^1.4"
     },
