--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,13 @@ services:
             - manager-redis
             - mailer
     manager-node-watch:
-        image: node:11.13-alpine
+        image: node:alpine
         volumes:
             - ./manager:/app
         working_dir: /app
         command: sh -c "until [ -f .ready ] ; do sleep 1 ; done && npm run watch"
     manager-node:
-        image: node:11.13-alpine
+        image: node:14.15.0-alpine
         volumes:
             - ./manager:/app
         working_dir: /app
