--- a/manager/config/packages/doctrine_migrations.yaml
+++ b/manager/config/packages/doctrine_migrations.yaml
@@ -1,8 +1,8 @@
 doctrine_migrations:
     # Namespace/path to search for migrations
     migrations_paths:
-        'App\Migrations': '%kernel.project_dir%/src/Migrations'
-#        'DoctrineMigrations': '%kernel.project_dir%/src/Migrations'
+#        'App\Migrations': '%kernel.project_dir%/src/Migrations'
+        'DoctrineMigrations': '%kernel.project_dir%/src/Migrations'
     # namespace is arbitrary but should be different from App\Migrations
     # as migrations classes should NOT be autoloaded
 #        namespace: DoctrineMigrations
