--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,8 +54,10 @@ services:
             - "54321:5432"
     manager-redis:
         image: redis:3.0-alpine
+        restart: always
         volumes:
             - manager-redis:/data
+#        костыль для установки проля на редис
         command: redis-server --requirepass secret
 
     mailer:
